src/test/deca/context/invalid/resultats/test5_unary_minus2-cont.res
./src/test/deca/context/invalid/test5_unary_minus2.deca:17:1: Unary minus must be applied to an expression of type int or float (current type : string).
